# uvf_smi

./: README.md
uvf_smi/: CMakeLists.txt  main.cpp  uvf_smi.cpp  uvf_smi.h
uvf_smi_client/: CMakeLists.txt  main.cpp  uvf_smi_client.cpp  uvf_smi_client.h
uvf_smi_server/: CMakeLists.txt  main.cpp  uvf_smi_server.cpp  uvf_smi_server.h
